# tree-sitter-structured-text

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-structured-text.pc.in
bindings/c/tree_sitter/: tree-sitter-structured-text.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_structured_text/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStructuredTextTests/: TreeSitterStructuredTextTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignment.txt  case_statement.txt  comments.txt  expressions.txt  fb_invocation.txt  function_block.txt  if_statement.txt  time_literals.txt  type_declaration.txt  value_constants.txt  variable_declarations.txt
