[package]
name = "tree-sitter-structured-text"
description = "IEC 61131-3 structured text"
version = "0.1.0"
authors = ["Teun Reyniers"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "structured-text"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/teunreyniers/tree-sitter-structured-text"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
